PROD-9-26-19/force-app/main/default/objects/External_Database_Account__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <description>Address for the External Account</description>
    <inlineHelpText>Address for the External Account</inlineHelpText>
    <label>Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>