PROD-9-26-19/force-app/main/default/objects/External_Database_Account__c/fields/Asset_Allocation_Changes__c.field-meta.xml
<CustomField>
    <fullName>Asset_Allocation_Changes__c</fullName>
    <description>Mapped from MMD</description>
    <inlineHelpText>Mapped from MMD</inlineHelpText>
    <label>Asset Allocation Changes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>