PROD-9-26-19/force-app/main/default/objects/External_Database_Account__c/fields/Co_Invest_with_GP__c.field-meta.xml
<CustomField>
    <fullName>Co_Invest_with_GP__c</fullName>
    <description>Mapped from Preqin</description>
    <inlineHelpText>Mapped from Preqin</inlineHelpText>
    <label>Co-Invest with GP</label>
    <length>100</length>
    <type>Text</type>
</CustomField>