PROD-9-26-19/force-app/main/default/objects/External_Database_Account__c/fields/Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Country_Code__c</fullName>
    <description>to help with auto populate country when creating an account</description>
    <label>Country Code</label>
    <length>4</length>
    <type>Text</type>
</CustomField>