PROD-9-26-19/force-app/main/default/objects/External_Database_Account__c/fields/Current_Allocation_to_RE__c.field-meta.xml
<CustomField>
    <fullName>Current_Allocation_to_RE__c</fullName>
    <description>Mapped from Preqin</description>
    <inlineHelpText>Mapped from Preqin</inlineHelpText>
    <label>Current Allocation to RE (%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>