PROD-9-26-19/force-app/main/default/objects/External_Database_Account__c/fields/Currently_Investing_in_PE__c.field-meta.xml
<CustomField>
    <fullName>Currently_Investing_in_PE__c</fullName>
    <description>Mapped from Preqin</description>
    <inlineHelpText>Mapped from Preqin</inlineHelpText>
    <label>Currently Investing in PE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Considering</fullName>
            </value>
            <value>
                <fullName>Longer Term</fullName>
            </value>
            <value>
                <fullName>No Longer Investing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>