PROD-9-26-19/force-app/main/default/objects/External_Database_Account__c/fields/First_Time_Funds__c.field-meta.xml
<CustomField>
    <fullName>First_Time_Funds__c</fullName>
    <description>Mapped from Salesforce</description>
    <inlineHelpText>Mapped from Salesforce</inlineHelpText>
    <label>First-Time Funds</label>
    <length>100</length>
    <type>Text</type>
</CustomField>