PROD-9-26-19/force-app/main/default/objects/External_Database_Account__c/fields/Funds_under_Mgmt_mn_USD__c.field-meta.xml
<CustomField>
    <fullName>Funds_under_Mgmt_mn_USD__c</fullName>
    <description>Mapped from Preqin</description>
    <inlineHelpText>Mapped from Preqin</inlineHelpText>
    <label>Funds under Mgmt (mn USD)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>