PROD-9-26-19/force-app/main/default/objects/External_Database_Account__c/fields/General_Consultants__c.field-meta.xml
<CustomField>
    <fullName>General_Consultants__c</fullName>
    <description>Mapped from Salesforce</description>
    <inlineHelpText>Mapped from Salesforce</inlineHelpText>
    <label>General Consultants</label>
    <length>255</length>
    <type>Text</type>
</CustomField>