PROD-9-26-19/force-app/main/default/objects/External_Database_Account__c/fields/Infrastructure_Consultants__c.field-meta.xml
<CustomField>
    <fullName>Infrastructure_Consultants__c</fullName>
    <description>Mapped from Preqin</description>
    <inlineHelpText>Mapped from Preqin</inlineHelpText>
    <label>Infrastructure Consultants</label>
    <length>255</length>
    <type>Text</type>
</CustomField>