PROD-9-26-19/force-app/main/default/objects/External_Database_Account__c/fields/Investment_types_for_new_mgrs__c.field-meta.xml
<CustomField>
    <fullName>Investment_types_for_new_mgrs__c</fullName>
    <description>Mapped from MMD</description>
    <inlineHelpText>Mapped from MMD</inlineHelpText>
    <label>Investment types for new mgrs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>