PROD-9-26-19/force-app/main/default/objects/External_Database_Account__c/fields/MMD_ID__c.field-meta.xml
<CustomField>
    <fullName>MMD_ID__c</fullName>
    <description>Unique MMD External ID</description>
    <externalId>true</externalId>
    <inlineHelpText>Unique MMD External ID</inlineHelpText>
    <label>MMD ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>