PROD-9-26-19/force-app/main/default/objects/External_Database_Account__c/fields/No_of_Clients__c.field-meta.xml
<CustomField>
    <fullName>No_of_Clients__c</fullName>
    <description>Mapped from MMD</description>
    <inlineHelpText>Mapped from MMD</inlineHelpText>
    <label>No. of Clients</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>