PROD-9-26-19/force-app/main/default/objects/External_Database_Account__c/fields/RE_Investment_Types__c.field-meta.xml
<CustomField>
    <fullName>RE_Investment_Types__c</fullName>
    <description>from Preqin</description>
    <inlineHelpText>from Preqin</inlineHelpText>
    <label>RE Investment Types</label>
    <length>255</length>
    <type>Text</type>
</CustomField>