PROD-9-26-19/force-app/main/default/objects/External_Database_Account__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <description>The acronym of the State - map to State Code when creating an Account</description>
    <inlineHelpText>The acronym of the State - map to State Code when creating an Account</inlineHelpText>
    <label>State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>