PROD-9-26-19/force-app/main/default/objects/External_Database_Account__c/fields/Target_Allocation_to_PE_mn_USD__c.field-meta.xml
<CustomField>
    <fullName>Target_Allocation_to_PE_mn_USD__c</fullName>
    <description>Mapped from Preqin</description>
    <inlineHelpText>Mapped from Preqin</inlineHelpText>
    <label>Target Allocation to PE (mn USD)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>