PROD-9-26-19/force-app/main/default/objects/External_Database_Account__c/fields/Total_E_F_Assets__c.field-meta.xml
<CustomField>
    <fullName>Total_E_F_Assets__c</fullName>
    <description>Mapped from MMD</description>
    <inlineHelpText>Mapped from MMD</inlineHelpText>
    <label>Total E/F Assets</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>