PROD-9-26-19/force-app/main/default/objects/External_Database_Account__c/fields/Yr_Began_OCIO_Offering__c.field-meta.xml
<CustomField>
    <fullName>Yr_Began_OCIO_Offering__c</fullName>
    <description>Mapped from MMD</description>
    <inlineHelpText>Mapped from MMD</inlineHelpText>
    <label>Yr. Began OCIO Offering</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>